W-10840490-connector-z-index-bug fix (#2506)

--- a/packages/@flow-builder/auto-layout-canvas-ui/src/builder_platform_interaction/alcCanvas/alcCanvas.css
+++ b/packages/@flow-builder/auto-layout-canvas-ui/src/builder_platform_interaction/alcCanvas/alcCanvas.css
@@ -23,9 +23,6 @@
     --z-index-alc-menu-trigger-open: 4;
     --z-index-alc-menu-trigger-container-open: 4;
 
-    --z-index-alc-connector-to-be-deleted: 0;
-    --z-index-alc-connector-highlighted: 0;
-
     --z-index-alc-canvas-overlay: 99999;
 
     --alc-menu-width: 300px;
